# Grafo_Amorodo_V00

./: main.py  pyproject.toml
.claude/: settings.local.json
doc/: architecture.md  plan de trabajo.md
src/story_factory/: graph.py  state.py  utils.py
src/story_factory/nodes/: evaluator.py  finalizer.py  ideator.py  setup.py  writer.py
story-factory-ai/src/story_factory/: graph.py  utils.py
story-factory-ai/src/story_factory/nodes/: setup.py
